<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="api"
            type="com.example.bancotony.APIBanco" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcoesBancoActivity"
    android:background="#FFFFFF" >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sacar"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:text="@string/msg_sacar"
        app:icon="@drawable/moedasaldo"
        app:iconSize="200px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117"
        tools:ignore="PxUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_deposito"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="194dp"
        android:layout_height="105dp"
        android:text="@string/msg_fazer_deposito"
        app:icon="@drawable/moedasaldo"
        app:iconSize="200px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118"
        tools:ignore="PxUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_pagar_boleto"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="194dp"
        android:layout_height="105dp"
        android:text="@string/msg_pagar_boleto"
        app:icon="@drawable/moedasaldo"
        app:iconSize="200px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="PxUsage" />

    <pl.droidsonroids.gif.GifImageButton
        android:layout_width="400px"
        android:layout_height="500px"
        android:src="@drawable/moedab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/saldo"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:fontFamily="casual"
        android:text="@string/msg_saldo"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <TextView
        android:id="@+id/saldo_usuario"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:fontFamily="casual"
        android:text="@{api.saldoFormatado, default = @string/defaultRs}"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.847"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ok"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_ok"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="353dp"
        android:layout_height="79dp"
        android:hint="@string/hint_digite_valor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/digite_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/star_on"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="24sp"
            android:visibility="gone"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>